<?xml version="1.0" encoding="utf-8"?>


<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/white">


        <Toolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/back_arrow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/backarrow"
                android:clickable="true"
                android:focusable="true"
                android:contentDescription="@string/back"
                app:tint="@color/Blue">

            </ImageView>

        </Toolbar>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop="30dp">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Create"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="30sp">
            </TextView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/Account"
                android:textColor="@color/Blue"
                android:textStyle="bold"
                android:textSize="30sp">

            </TextView>

        </LinearLayout>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text1"
            android:gravity="center"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/gray"
            android:layout_marginTop="14sp">

        </TextView>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/name_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="24dp"
            app:boxCornerRadiusTopStart="10dp"
            app:boxCornerRadiusBottomStart="10dp"
            app:boxCornerRadiusTopEnd="10dp"
            app:boxCornerRadiusBottomEnd="10dp"

            >
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tex_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/Enter_Name"
                android:textColor="@color/black"
                android:inputType="text"
                android:maxLength="20">

            </com.google.android.material.textfield.TextInputEditText>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/email_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginVertical="10dp"
            app:boxCornerRadiusTopStart="10dp"
            app:boxCornerRadiusBottomStart="10dp"
            app:boxCornerRadiusTopEnd="10dp"
            app:boxCornerRadiusBottomEnd="10dp"


            >


            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tex_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/Email"
                android:textColor="@color/black"
                android:inputType="textEmailAddress">

            </com.google.android.material.textfield.TextInputEditText>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginVertical="10dp"
            app:boxCornerRadiusTopStart="10dp"
            app:boxCornerRadiusBottomStart="10dp"
            app:boxCornerRadiusTopEnd="10dp"
            app:boxCornerRadiusBottomEnd="10dp"
            app:endIconMode="password_toggle"
            app:suffixText="6 digit"


            >


            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tex_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/Password"
                android:textColor="@color/black"
                android:inputType="textPassword"
                android:maxLength="6">



            </com.google.android.material.textfield.TextInputEditText>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/comfrimPassword_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginVertical="10dp"
            app:boxCornerRadiusTopStart="10dp"
            app:boxCornerRadiusBottomStart="10dp"
            app:boxCornerRadiusTopEnd="10dp"
            app:boxCornerRadiusBottomEnd="10dp"
            app:endIconMode="password_toggle"
            app:suffixText="6 digit"


            >


            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tex_comfrimPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/Confirm_password"
                android:inputType="textPassword"
                android:textColor="@color/black"
                android:maxLength="6">

            </com.google.android.material.textfield.TextInputEditText>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_signUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:backgroundTint="@color/Blue"
            android:gravity="center"
            android:paddingVertical="10dp"
            android:text="@string/button_Sign_up"
            android:textColor="@color/white"
            android:textSize="20sp">

        </com.google.android.material.button.MaterialButton>

        <LinearLayout
            android:id="@+id/go_login_screen"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="24dp"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/Already_account"
                android:textSize="14sp"
                android:textColor="@color/black">

            </TextView>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:gravity="center"
                android:text="@string/login"
                android:textSize="14sp"
                android:textColor="@color/Blue"
                android:textStyle="bold">

            </TextView>

        </LinearLayout>



    </LinearLayout>
</ScrollView>